# TaxIQ

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  server.py  test.py
agents/: __init__.py  agent.py  middleware.py
archive/: plan.docx
prompts/: prompt_builder.py  tax_agent_system_prompt.txt
rag/: __init__.py  rag_pipeline.py
rag/chroma_db/: Income_Tax_Act_2025_as_amended_by_FA_Act_2026.md  chunks.json  extracted_tables.json  test_queries.json
rag/embeddings/: __init__.py  base.py  sentence_transformer.py
rag/evaluation/: evaluate_retrievers.py
rag/reranker/: __init__.py  base.py  transformer_reranker.py
rag/retrieval/: __init__.py  base.py  bm25_retriever.py  fusion.py  hybrid_retriever.py  query_transformer.py
rag/vector_store/: __init__.py  base.py  chroma.py  test.py
static/: app.js  index.html  style.css
test/: test_agent_tools.py  test_deduction_checker.py  test_itr1_calculator.py  test_itr2_calculator.py  test_profile_store.py
tools/: __init__.py  deduction_checker.py  itr1_calculator.py  itr2_calculator.py  profile_store.py  schemas.py  tax_tools.py
tools/profiles/: 001.json
