[project]
name = "tax-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "unstructured[pdf]>=0.24.0",
    "sentence-transformers",
    "langgraph-checkpoint-sqlite>=3.1.0",
]
